[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.0-9/20638858_793124090867972_8269314278453485145_n.jpg?oh=21e5415a9dc596894514cfa1bc73ea8f&oe=5A2A4B56" class="img-medium"/>
+            <img src="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.0-9/20638858_793124090867972_8269314278453485145_n.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
