--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.0-9/20638858_793124090867972_8269314278453485145_n.jpg" class="img-medium"/>
+            <img src="https://instagram.fdel8-1.fna.fbcdn.net/t51.2885-19/s150x150/19761650_1720392824927923_2451420229926912000_a.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
